<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.geocomply.test.gpapchecker.view.InsetsAwareLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_subtitle"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginBottom="32dp" />

        <Button
            android:id="@+id/btn_package_checker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_package_checker"
            android:textSize="16sp"
            android:padding="16dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_apps_screen"
            android:textSize="16sp"
            android:padding="16dp" />

    </com.geocomply.test.gpapchecker.view.InsetsAwareLinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>